# agntly

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  agntly-validation-playbook.html  app.html  docker-compose.yml  ecosystem.config.js  ecosystem.production.config.cjs  ecosystem.sandbox.config.cjs  explainer.html  index.html  marketplace.html  package.json  pitch-deck.html  pnpm-lock.yaml  pnpm-workspace.yaml  prd.html  start-services.sh  turbo.json  vitest.integration.config.ts
.github/workflows/: deploy-production.yml  deploy-sandbox.yml  deploy.yml
.gstack/qa-reports/: qa-report-agntly-2026-03-20-final.md  qa-report-agntly-2026-03-20.md
contracts/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/deploy/: deploy.ts  production.ts  sandbox.ts
contracts/src/: AgntlyEscrow.sol  AgntlyRegistry.sol  AgntlyWallet.sol  MockUSDC.sol
docs/: builder-validation-guide.md
frontend/: Dockerfile  middleware.ts  next.config.js  package.json  tailwind.config.ts
frontend/.next/: BUILD_ID  (+7 more)
scripts/: deploy-prod.sh  deploy-sandbox.sh  deploy.sh  e2e-sdk-test.ts  init-databases.sql  migrate.sql  provision-vm.sh  rls-policies.sql  rls-policies.test.ts  seed-sandbox-wallets.sql
sdk/python/: README.md  pyproject.toml
sdk/python/agntly/: __init__.py  analytics.py  client.py  errors.py  types.py
sdk/python/agntly/resources/: __init__.py  agents.py  tasks.py  wallets.py
sdk/python/tests/: test_agents.py  test_client.py  test_tasks.py  test_wallets.py
shared/: package.json  tsconfig.tsbuildinfo
(+317 files in other folders)
