[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agntly"
version = "0.1.0"
description = "Python SDK for the Agntly AI agent marketplace"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
analytics = [
    "posthog>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
